k8s/5-service-type-load-balancer-example.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: 5-service-type-load-balancer-example
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver
  namespace: 5-service-type-load-balancer-example
spec:
  selector:
    matchLabels:
      app: echoserver
  replicas: 1
  template:
    metadata:
      labels:
        app: echoserver
    spec:
      containers:
        - image: k8s.gcr.io/e2e-test-images/echoserver:2.5
          name: echoserver
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: echoserver
  namespace: 5-service-type-load-balancer-example
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
    # service.beta.kubernetes.io/aws-load-balancer-proxy-protocol: "*"
spec:
  ports:
    - port: 8080
      protocol: TCP
  type: LoadBalancer
  selector:
    app: echoserver
